# oarepo-model-builder-requests

./: .gitignore  README.md  format.sh  model_requested_document.yaml  run-tests.sh  run_tests.sh  setup.cfg
.github/workflows/: build.yaml  main.yml
oarepo_model_builder_requests/datatypes/components/: __init__.py
oarepo_model_builder_requests/datatypes/components/requests_model/: __init__.py  marshmallow.py  record_item.py  requests.py  requests_ext.py  resolver.py  service.py  ui_marshmallow.py  ui_resolver.py
oarepo_model_builder_requests/invenio/: __init__.py  invenio_api_views.py  invenio_app_views.py  invenio_config.py  invenio_ext_resource.py  invenio_record_requests_resource_setup_cfg.py  invenio_requests_actions.py  invenio_requests_builder_base.py  invenio_requests_config.py  invenio_requests_drafts_parent.py  invenio_requests_parent.py  invenio_requests_parent_marshmallow.py  invenio_requests_parent_marshmallow_link.py  invenio_requests_resolvers.py  invenio_requests_setup_cfg.py  invenio_requests_types.py  invenio_requests_views.py  overriding_builder.py  record_request_types_resource_setup_cfg.py  record_requests_resource_setup_cfg.py
oarepo_model_builder_requests/invenio/templates/: config.py.jinja2  invenio_requests_actions.py.jinja2  invenio_requests_config.py.jinja2  invenio_requests_resolvers.py.jinja2  invenio_requests_types.py.jinja2  invenio_requests_views.py.jinja2  parent_marshmallow_link.py.jinja2
oarepo_model_builder_requests/model_preprocessors/: invenio.py
oarepo_model_builder_requests/tests/: __init__.py  invenio_requests_conftest.py  invenio_requests_test_actions.py  invenio_requests_test_classes.py  invenio_requests_test_requests.py  invenio_requests_test_types.py
oarepo_model_builder_requests/tests/templates/: conftest.py.jinja2  test_requests.py.jinja2
oarepo_model_builder_requests/utils/: requests_utils.py
oarepo_model_builder_requests/validation/schemas/: requests.json5
tests/: example_document.yaml  test_source_generation.py  thesis.yaml
tests/requests_tests/: conftest.py  test_custom_action.py  test_requests.py
tests/test_custom_classes/: setup.py
tests/test_custom_classes/test_custom_classes/: request_test_actions.py  request_test_types.py
