[metadata]
name = oarepo-model-builder-requests
version = 1.0.0
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=1.0.3
    #invenio_access>=1.4.4
    #invenio_app>=1.3.4
    #invenio_db>=1.0.14
    #invenio_pidstore>=1.2.3
    #invenio_records>=2.0.0
    #invenio-records-rest>=2.1.0
    #invenio_records_permissions>=0.13.0
    #invenio_records_resources>=0.21.4
    #invenio-search>=2.1.0
    #invenio-requests>=1.0.2
packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.packages.find]
exclude = example_model

[options.entry_points]
oarepo.model_schemas =
    requests = oarepo_model_builder_requests.validation.schemas:requests.json5
oarepo_model_builder.builders =
    2210-invenio_requests_actions  = oarepo_model_builder_requests.invenio.invenio_requests_actions:InvenioRequestsActionsBuilder
    2211-invenio_requests_resolvers  = oarepo_model_builder_requests.invenio.invenio_requests_resolvers:InvenioRequestsResolversBuilder
    2212-invenio_requests_types  = oarepo_model_builder_requests.invenio.invenio_requests_types:InvenioRequestsTypesBuilder
    2213-invenio_requests_setup_cfg = oarepo_model_builder_requests.invenio.invenio_requests_setup_cfg:InvenioRequestsSetupCfgBuilder
    2214-invenio_requests_views = oarepo_model_builder_requests.invenio.invenio_requests_views:InvenioRequestsViewsBuilder
    2215-invenio_requests_config = oarepo_model_builder_requests.invenio.invenio_requests_config:InvenioRequestsConfigBuilder
    2216-invenio_requests_conftest = oarepo_model_builder_requests.tests.invenio_requests_conftest:InvenioRequestsConftestBuilder
    2217-invenio_requests_test_classes = oarepo_model_builder_requests.tests.invenio_requests_test_classes:InvenioRequestsTestClassesBuilder
    2218-invenio_requests_test_requests = oarepo_model_builder_requests.tests.invenio_requests_test_requests:InvenioRequestsTestRequestsBuilder

oarepo_model_builder.templates =
    98-requests_templates  = oarepo_model_builder_requests.invenio
    99-requests_tests_templates = oarepo_model_builder_requests.tests
oarepo_model_builder.model_preprocessors =
    30-invenio_requests  = oarepo_model_builder_requests.model_preprocessors.invenio:InvenioModelPreprocessor
oarepo_model_builder.property_preprocessors =
    100-requests = oarepo_model_builder_requests.property_preprocessors.requests:RequestsPreprocessor


#invenio_base.api_apps = model_requested_document = model_requested_document.ext:ModelRequestedDocumentExt
#invenio_db.alembic = model_requested_document = model_requested_document:alembic
#invenio_db.models = model_requested_document = model_requested_document.records.models
#invenio_base.api_blueprints = ModelRequestedDocument = model_requested_document.views:create_blueprint_from_app
#invenio_search.mappings = model_requested_document = model_requested_document.records.mappings
#invenio_jsonschemas.schemas = model_requested_document = model_requested_document.records.jsonschemas
#oarepo.models = model-requested-document = model_requested_document.models:model.json


[options.extras_require]
tests =
    #invenio-app>=1.3.3
    #invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.11
    #invenio_search[elasticsearch7]>=2.0.0
    #Werkzeug<2.2.0
    #Flask-Login>=0.6.1
    #pyyaml>=6.0
